fixed profile picture, fixed navigation bar on mobile, fixed height/margin on "about"

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,14 +5,14 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: darkgray;
-    background-image: url('/images/other_images/gray_wallpaper2.jpg');
+    background-color: rgb(20, 20, 20);
+    /* background-image: url('/images/other_images/gray_wallpaper2.jpg'); */
     background-size: cover;
     color: rgba(255, 255, 255, 0.75);
     text-align: center;
     padding: 8em 0 6em 0;
-    padding-top: 18em;
-    /* height: 100em; */
+    /* padding-top: 18em; */
+    height: 80em;
     min-height: 20em;
     min-height: 75vh;
     margin: 8em;
@@ -55,16 +55,18 @@
     }
 }
 
-/* @media (max-width: 576px) {
+@media (max-width: 576px) {
     .center-icons {
         display: flex;
         justify-content: center;
+        width: 100%;
+        margin: 0px !important;
     }
 
     .center-icons li {
         margin: 0px;
     }
-} */
+}
 
 /* #header:before {
     content: '';
