--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -18,11 +18,12 @@
 .profile-image {
 	width: 25rem;
     height: 25rem;
-    /* object-fit: cover; */
+    object-fit: cover;
+	object-position: 50% 12%;
     border-radius: 50%;
     border: 5px solid #ccc;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-	clip-path: circle(50% at 54% 47%);
+	/* box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.2); */
+	clip-path: circle(50% at 50% 50%);
 }
 
 .icons {
